--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@ function dispalyGreetings(today){
         hrs = today.getHours();
         name="Darling"
         if (hrs < 12)
-            greet = 'Good Morning  '+Darling;
+            greet = 'Good Morning  '+name;
         else if (hrs >= 12 && hrs <= 17)
-            greet = 'Good Afternoon '+Darling;
+            greet = 'Good Afternoon '+name;
         else if (hrs >= 17 && hrs <= 24)
-            greet = 'Good Evening  '+Darling;
+            greet = 'Good Evening  '+name;
         document.getElementById('greet').innerHTML = greet;
+
     }
