--- a/greetings.html
+++ b/greetings.html
@@ -5,7 +5,7 @@
 #lbl {
     font-family: monospace;
     font-size: xx-large;
-    color: #626262;
+    color: #2E4374;
     padding: 5px;
     border: 1px solid #ececec;
     text-align: center;
@@ -45,11 +45,11 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'Good Morning,  ';
+        greet = 'Good Morning  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon, ';
+        greet = 'Good Afternoon ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening,  ';
+        greet = 'Good Evening  ';
 
     document.getElementById('lbl').innerHTML =
         greet+= "Darling" + `<div id="date"> It's ${date}</div>`;
